[gd_scene load_steps=5 format=3 uid="uid://cuhdcu3glcrkg"]

[ext_resource type="FontFile" uid="uid://cy2mr8pwdog77" path="res://assets/fonts/Beanstalk.ttf" id="1_jhko7"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_mlke6"]
[ext_resource type="FontFile" uid="uid://bjtxep2m1e6vr" path="res://assets/fonts/CelticTime.ttf" id="2_677lm"]
[ext_resource type="PackedScene" uid="uid://cwo022lpg0jc" path="res://scenes/options.tscn" id="6_05rjj"]

[node name="PauseMenu" type="ColorRect"]
process_mode = 2
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.141176)
script = ExtResource("1_mlke6")

[node name="PauseMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -60.0
offset_right = 90.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Paused" type="Label" parent="PauseMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jhko7")
theme_override_font_sizes/font_size = 16
text = "Paused"
horizontal_alignment = 1

[node name="resume" type="Button" parent="PauseMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_677lm")
theme_override_font_sizes/font_size = 16
text = "resume"

[node name="options" type="Button" parent="PauseMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_677lm")
text = "options"

[node name="quit" type="Button" parent="PauseMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_677lm")
text = "quit"

[node name="OptionsMenu" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -60.0
offset_right = 90.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Close" type="Button" parent="OptionsMenu"]
layout_mode = 2

[node name="Options" parent="OptionsMenu" instance=ExtResource("6_05rjj")]
layout_mode = 2

[node name="QuitMenu" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -47.5
offset_right = 90.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.537255)

[node name="VBoxContainer" type="VBoxContainer" parent="QuitMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -33.5
offset_right = 32.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="Are You Sure" type="Label" parent="QuitMenu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jhko7")
text = "Are you sure?"
horizontal_alignment = 1

[node name="yes" type="Button" parent="QuitMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_677lm")
text = "yes"

[node name="no" type="Button" parent="QuitMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_677lm")
text = "no"

[connection signal="pressed" from="PauseMenu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionsMenu/Close" to="." method="_on_options_close_pressed"]
[connection signal="pressed" from="QuitMenu/VBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="QuitMenu/VBoxContainer/no" to="." method="_on_no_pressed"]
